# azure-sphere-samples

Samples/ADC/ADC_HighLevelApp/: CMakeLists.txt
Samples/GPIO/GPIO_HighLevelApp/: CMakeLists.txt  main.c
Visual studio codes/blink/AzureSphereBlink1/: CMakeWorkspaceSettings.json
Visual studio codes/blink/AzureSphereBlink1/AzureSphereBlink1/: CMakeLists.txt  CMakePresets.json  app_manifest.json  launch.vs.json  main.c
