#  Copyright (c) Microsoft Corporation. All rights reserved.
#  Licensed under the MIT License.

cmake_minimum_required (VERSION 3.20)

project (AzureSphereBlink1 C)

## Uncomment the following two lines if you are using Azure Sphere SDK version 23.05 or earlier:

# azsphere_configure_tools(TOOLS_REVISION "23.05")
# azsphere_configure_api(TARGET_API_SET "16")

# Create executable
add_executable (${PROJECT_NAME} main.c)
target_link_libraries (${PROJECT_NAME} applibs pthread gcc_s c)
azsphere_target_hardware_definition(${PROJECT_NAME} TARGET_DIRECTORY "HardwareDefinitions/seeed_mt3620_mdb" TARGET_DEFINITION "template_appliance.json")

azsphere_target_add_image_package(${PROJECT_NAME})
